Fri Dec 13 22:37:49 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (TERMLIBS): Look for termcap and terminfo after
	ncurses and curses.

Thu Dec 12 02:27:08 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (ALL_LDFLAGS): Add CPICFLAG here since gcc needs it
	on some systems.

	* configure.in (FPICFLAGS): Set to -fPIC if using g77 on HP/UX.

	* Makefile.in, octMakefile.in: Delete all doc-dist, local-dist,
	and split-dist targets.  Likewise for all other Makefiles in the
	subdirectories.

	* README.Windows: Renamed from README.WINDOWS.

Tue Dec 10 01:33:52 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Version 2.0 released.

	* octMakefile.in (binary-dist): Print message instead of making a
	binary distribution.

Mon Dec  9 11:28:27 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* README.WINDOWS: New file.
	* octMakefile.in: Distribute it.

	* configure.in: Substitute EXE.  On cygwin32 systems, set it to .exe.
	* Makeconf.in (EXE): Add definition.

	* configure.in: On cygwin32 systems, set default to disable GNU info.

	* aclocal.m4 (OCTAVE_STRING_NPOS): New macro.
	* configure.in: Call it.

	* acconfig.h: Add undef for NPOS.
	* config.h.bot: Remove kluge for deciding whether to define NPOS.

Thu Dec  5 11:05:02 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* config.sub: Update to current version from FSF.

	* Makeconf.in (ALL_LDFLAGS): Add $(FORTRAN_MAIN_FLAG).
	* configure.in (FORTRAN_MAIN_FLAG): Substitute it.

	* octave-bug.in: Prompt for abort, edit, list, or send.
	Get subject from message in case it has been edited.

	* configure.in: When looking for libf2c, provide definitions for
	MAIN_ and MAIN__.

Tue Dec  3 11:35:35 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* config.guess: Delete second copy of script in file.

Sun Nov 24 21:40:25 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Set GCC_IEEE_FP_FLAG to -mieee-fp on all x86
	systems, not just those running Linux.
